# EcoBenchmark

./: .gitignore  README.md  debug_data.py  pyproject.toml
notebooks/: visualize.ipynb
src/: benchmark.py  data_loader.py  deepforest_wrapper.py  metrics.py  preprocess.py  prompt.py
src/models/: base_model.py  deepforest_wrapper.py  gemini_wrapper.py
